# AI-Analytics-Hub-ML

./: .env.example  .gitignore  LICENSE  README.md  celery_worker.py  docker-compose.yml  pyproject.toml  schema.sql  wsgi.py
ai_analytics_hub/: __init__.py
ai_analytics_hub/api/: __init__.py  auth_helpers.py  inference_helpers.py  responses.py  validation.py
ai_analytics_hub/api/routes/: __init__.py  apriori.py  auth.py  chat.py  classifier.py  health.py  jobs.py  ner.py  qa.py  text_generation.py  uploads.py
ai_analytics_hub/core/: __init__.py  commands.py  config.py  errors.py  exceptions.py  extensions.py  logging.py  security.py
ai_analytics_hub/domain/: __init__.py  models.py  schemas.py
ai_analytics_hub/services/: __init__.py  apriori_service.py  audit_service.py  auth_service.py  chat_service.py  classifier_service.py  dataset_service.py  job_service.py  transformer_service.py  upload_service.py
ai_analytics_hub/static/css/: app.css
ai_analytics_hub/static/js/: app.js  assistant.js  dl.js  genai.js  ml.js  workbench.js
ai_analytics_hub/tasks/: __init__.py  celery_app.py  jobs.py
ai_analytics_hub/templates/: base.html
ai_analytics_hub/templates/admin/: users.html
ai_analytics_hub/templates/assistant/: index.html
ai_analytics_hub/templates/auth/: login.html
ai_analytics_hub/templates/dashboard/: index.html  landing.html
ai_analytics_hub/templates/dl/: index.html
ai_analytics_hub/templates/errors/: 404.html  500.html  generic.html
ai_analytics_hub/templates/genai/: index.html
ai_analytics_hub/templates/ml/: index.html
ai_analytics_hub/templates/workbench/: index.html
ai_analytics_hub/web/: __init__.py
deploy/docker/: Dockerfile
docs/: IMPLEMENTATION_ROADMAP.md  PRODUCTION_BLUEPRINT.md
docs/adr/: 0001-modular-monolith.md
migrations/: README.md
tests/: conftest.py
tests/integration/: test_admin_web.py  test_auth_api.py  test_chat_api.py
tests/unit/: test_health.py
(+8 files in other folders)
