[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-analytics-hub"
version = "0.1.0"
description = "Production-oriented Flask platform for analytics, ML, DL, and Generative AI workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "celery[redis]>=5.4.0",
  "Flask>=3.0.0",
  "Flask-Cors>=5.0.0",
  "Flask-JWT-Extended>=4.6.0",
  "Flask-Limiter>=3.8.0",
  "Flask-Login>=0.6.3",
  "Flask-Migrate>=4.0.7",
  "Flask-SQLAlchemy>=3.1.1",
  "Flask-Talisman>=1.1.0",
  "Flask-WTF>=1.2.1",
  "gunicorn>=23.0.0",
  "httpx>=0.27.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "redis>=5.0.7",
  "sentry-sdk[flask]>=2.12.0",
  "SQLAlchemy>=2.0.31",
  "Werkzeug>=3.0.0",
]

[project.optional-dependencies]
analytics = [
  "mlxtend>=0.23.1",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
]
training = [
  "tensorflow>=2.16.0",
]
genai = [
  "onnxruntime>=1.19.0",
  "torch>=2.4.0",
  "transformers>=4.44.0,<5",
]
mlops = [
  "mlflow>=2.14.0",
]
full = [
  "mlflow>=2.14.0",
  "mlxtend>=0.23.1",
  "numpy>=1.26.0",
  "onnxruntime>=1.19.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "tensorflow>=2.16.0",
  "torch>=2.4.0",
  "transformers>=4.44.0,<5",
]
dev = [
  "bandit>=1.7.9",
  "mypy>=1.11.1",
  "pip-audit>=2.7.3",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.7",
]

[tool.setuptools.packages.find]
include = ["ai_analytics_hub*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
